--- a/src/css/home.css
+++ b/src/css/home.css
@@ -27,7 +27,7 @@
 }
 
 .welcome_text_subtext {
-    color: white;
+    color: #D0D0D0 !important;
     text-align: center;
     font-size: 40px;
     opacity: 1 !important;
@@ -67,18 +67,24 @@
     min-width: 300px !important;
     margin-top: 100px !important;
     align-self: center;
+    cursor: pointer;
 }
 
 @media (max-width: 1200px) {
-    
+
     .welcome_text_holder {
-        font-size: 80px !important;
-        margin-bottom: 25px;
+        font-size: 50px !important;
+        margin-bottom: 5px;
+        margin-top: 15px;
     }
 
     .welcome_text_subtext {
-        font-size: 52px !important;
+        font-size: 24px !important;
         margin-bottom: 25px;
+    }
+
+    .welcome_holder_background {
+        height: 200px !important;
     }
 }
 
@@ -95,10 +101,15 @@
 }
 
 @media (max-width: 1400px) {
-    
+
     .welcome_text_holder {
         font-size: 50px;
         margin-bottom: 25px;
+    }
+
+    .welcome_holder_background {
+        height: 200px !important;
+        max-height: 200px !important;
     }
 
     .welcome_text_subtext {
@@ -150,7 +161,7 @@
     font-size: 50px;
     margin-left: 20px;
     margin-top: 15px;
-    color: #FFFFFF !important;
+    color: #D0D0D0 !important;
 }
 
 .who_we_are_header {
@@ -169,7 +180,6 @@
     width: 80%;
     margin-left: 10%;
     padding: 15px;
-    color: white !important;
 }
 
 .who_we_are_text {
@@ -203,6 +213,16 @@
     margin-top: 15px;
 }
 
+.wwo_list_holder_leadership {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    margin-top: 15px;
+    width: 100%;
+}
+
 .wwoListItem {
     color: #D0D0D0;
     margin-left: 15px;
@@ -228,6 +248,7 @@
     text-align: left;
     padding: 15px;
     font-size: 25px;
+    color: #D0D0D0;
 }
 
 .join_now_holder {
@@ -264,12 +285,12 @@ Leadership
 
 .leadership_holder {
     background-color: #1F1F20 !important;
-    width: 90%;
-    margin-left: 5% !important;
+    width: 80%;
+    margin-left: 10% !important;
     z-index: 1 !important;
     position: relative;
-    padding-bottom: 50px; 
-    margin-top: 150px; 
+    padding-bottom: 50px;
+    margin-top: 150px;
 }
 
 .leadership_alliance_director_holder {
@@ -278,4 +299,328 @@ Leadership
     margin-left: 5%;
     height: 500px;
     background-color: #262626 !important;
+}
+
+.wwolist_leadership_title {
+    text-align: center !important;
+    width: 100%;
+    padding-right: 15px;
+    padding-top: 15px;
+    font-size: 42px;
+}
+
+.wwoLeadershipItem {
+    color: #D0D0D0;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-self: center;
+    background-color: #262626 !important;
+    max-width: 400px;
+    width: 200%;
+    margin-bottom: 25px;
+    height: 680px;
+}
+
+.wwoLeadershipItemFull {
+    color: #D0D0D0;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-self: center;
+    background-color: #262626 !important;
+    width: 90%;
+    margin-bottom: 55px;
+    height: 550px;
+
+    /* Display flexbox */
+    display: flex;
+}
+
+.wwolist_leadership_text {
+    margin-top: 15px;
+    text-align: left;
+    padding: 35px;
+    font-size: 24px;
+    color: #D0D0D0;
+}
+
+.wwolist_leadership_role {
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+}
+
+.wwolist_leadership_image {
+    width: 40% !important;
+    margin-left: 30%;
+    margin-top: 25px;
+    border-radius: 100%;
+}
+
+.wwolist_leadership_image_full {
+    width: 30%;
+    margin-left: 35%;
+    margin-top: 55px;
+    border-radius: 100% !important;
+}
+
+.wwoLeadershipFull_left {
+    width: 100% !important;
+}
+
+.wwwoLeadershipFull_right {
+    width: 100% !important;
+}
+
+.wwoLeadershipFull_text_right {
+    font-size: 28px !important;
+    text-align: center;
+    height: 100%;
+    padding: 100px;
+}
+
+.wwoLeadershipItem_spacer {
+    color: #D0D0D0;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-self: center;
+    background-color: transparent !important;
+    max-width: 500px;
+    width: 200%;
+    margin-bottom: 25px;
+    height: 680px;
+}
+
+/* /////////////////////
+////////////////////////
+///////////////////// */
+/* Recruitment Holder */
+
+.rec_holder {
+    width: 100%;
+    height: 1000px !important;
+    margin-bottom: 55px;
+    margin-top: 155px !important;
+    z-index: 0 !important;
+    background-image: url('../assets/img/wallpaper_two.png');
+    background-size: cover;
+
+    border-top: solid 23px #202020;
+    border-bottom: solid 23px #202020;
+
+    padding-top: 10%;
+
+}
+
+/*  src={require("../../assets/img/wallpaper_two.png")}  */
+
+.rec_background_image {
+    width: 100%;
+    height: 108% !important;
+    position: absolute;
+    margin-top: -25px !important;
+    z-index: 0 !important;
+}
+
+.rec_paper_main {
+    width: 80%;
+    height: 80%;
+    top: 10% !important;
+    margin-left: 10%;
+    background-color: #202020 !important;
+    z-index: 0;
+}
+
+.rec_join_title {
+    width: 100%;
+    color: #D0D0D0;
+    font-size: 48px;
+    text-align: center;
+    padding-top: 32px;
+}
+
+.rec_list_holder {
+    width: 100%;
+    height: 100%;
+
+    /* Flexbox */
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.rec_list_left {
+    width: 100% !important;
+    height: 650px;
+}
+
+.rec_list_right {
+    width: 100% !important;
+    height: 650px;
+}
+
+.rec_left_obj, .rec_right_obj {
+    width: 90% !important;
+    margin: 2.5% !important;
+    background-color: #262626 !important;
+    height: 80%;
+}
+
+.rec_left_obj {
+    margin-left: 5% !important;
+    height: 95%;
+}
+
+.rec_right_obj {
+    margin-left: 5% !important;
+    height: 95%;
+}
+
+.rec_inner_title {
+    width: 90% !important;
+    font-size: 42px !important;
+    color: #D0D0D0;
+    text-align: center;
+    padding-left: 5%;
+    padding-top: 35px;
+}
+.rec_inner_info {
+    text-align: center;
+    width: 100%;
+    color: #D0D0D0;
+    font-size: 22px;
+}
+
+/* Mobile Styling... */
+@media (max-width: 1444px) {
+    .wwoLeadershipItemFull {
+
+        display: block !important;
+        height: 700px !important;
+    }
+
+    .wwolist_leadership_image_full {
+        width: 35% !important;
+        margin-left: 35% !important;
+    }
+
+    .wwoLeadershipFull_left {
+        height: 350px;
+    }
+
+    .wwwoLeadershipFull_right {
+
+    }
+
+    .wwoLeadershipFull_text_right {
+        font-size: 26px !important;
+        padding: 20px;
+        padding-top: 220px;
+    }
+    .rec_list_holder {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 720px) {
+    .wwoLeadershipFull_text_right {
+        font-size: 26px !important;
+        padding: 20px;
+        padding-top: 30px;
+    }
+
+    .rec_holder {
+        height: 1100px !important;
+    }
+}
+
+@media only screen and (max-device-width: 720px) {
+    .welcome_text_holder {
+        font-size: 32px !important;
+        margin-bottom: 5px !important;
+        margin-left: 0px !important;
+        width: 150% !important;
+        margin-left: -25% !important;
+    }
+
+    .welcome_text_subtext {
+        font-size: 18px !important;
+        width: 100% !important;
+    }
+
+    .welcome_holder_background {
+        width: 80% !important;
+        margin-left: -10% !important;
+        height: 150px !important;
+        max-height: 150px !important;
+    }
+
+    .background_image {
+        height: 800px !important;
+        max-height: 800px !important;
+    }
+
+    .who_we_are_header, .wwo_header {
+        font-size: 28px !important;
+    }
+
+    .who_we_are_text {
+        font-size: 16px !important;
+    }
+
+    .paper_who_we_are {
+        margin-left: -30px !important;
+    }
+
+    .login_holder {
+        margin-top: -80px !important;
+    }
+
+    .wwolist_icon {
+        font-size: 26px !important;
+    }
+
+    .wwolist_title {
+        font-size: 22px !important;
+    }
+
+    .wwolist_text {
+        font-size: 14px !important;
+    }
+
+    .wwoListItem {
+        height: 200px !important;
+    }
+
+    .wwolist_leadership_title {
+        font-size: 26px !important;
+    }
+
+    .wwolist_leadership_role {
+        font-size: 12px !important;
+    }
+
+    .wwolist_leadership_text {
+        font-size: 18px !important;
+    }
+
+    .wwoLeadershipFull_text_right {
+        font-size: 18px !important;
+        padding-top: 0 !important;
+    }
+
+    .wwoLeadershipItemFull {
+        height: 600px !important;
+    }
+
+    .wwoLeadershipFull_left {
+        height: 300px !important;
+    }
+
+    .wwoLeadershipItem {
+        height: 550px !important;
+    }
+
+    .rec_list_left, .rec_list_right {
+        height: 300px !important;
+    }
 }
