--- a/src/css/pogger.css
+++ b/src/css/pogger.css
@@ -27,6 +27,13 @@
     float: left;
     margin: 0.5%;
     background-color: #202020;
+
+    transition-duration: 0s !important;
+}
+
+.sig_holder_max {
+    width: 99% !important;
+    transition-duration: 0s !important;
 }
 
 .sig_holder {
@@ -113,7 +120,7 @@ Sig List
 
 .sig_list_header {
     width: 24%;
-    height: 35px;
+    height: 28px;
     position: fixed;
     background-color: #303030;
     margin-top: 0px;
@@ -124,12 +131,20 @@ Sig List
     justify-content: flex-start;
     border-bottom: solid 2px #404040;
 
-    margin-bottom: 15px;
+    margin-bottom: -5px;
 }
 
 .sig_list_header_tab {
     width: 100%;
-    font-size: 18px;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    margin-top: 6px;
+}
+
+.sig_list_header_tab_name {
+    width: 150%;
+    font-size: 12px;
     color: white;
     text-align: center;
     margin-top: 6px;
@@ -138,7 +153,7 @@ Sig List
 .sig_list_entry {
     width: 98%;
     margin-left: 1%;
-    height: 30px;
+    height: 23px;
 
     /* Flexbox */
     display: flex;
@@ -147,11 +162,25 @@ Sig List
 
     border-bottom: solid 1px gray;
     padding-bottom: 1px;
+    cursor: pointer;
+}
+
+.sig_list_entry:hover {
+    background-color: #404040 !important;
+}
+
+.sig_list_entry_text_name {
+    width: 150%;
+    font-size: 12px;
+    color: #D0D0D0;
+    text-align: center;
+    padding-top: 5px;
+    overflow-x: hidden;
 }
 
 .sig_list_entry_text {
     width: 100%;
-    font-size: 16px;
+    font-size: 12px;
     color: #D0D0D0;
     text-align: center;  
     padding-top: 5px;
@@ -169,8 +198,8 @@ Sig List
 
 .sig_scroll_view {
     width: 24%;
-    margin-top: 50px;
-    height: 40% !important;
+    margin-top: 40px;
+    height: 38% !important;
     position: fixed;
     overflow-y: scroll;
 }
@@ -182,10 +211,16 @@ Sig List
 }
 /* optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-    background: #FF0000;
+    /*background: #FF0000;*/
 }
 
+
+
+
 /* Pogger System! */
+
+
+
 
 .no_selected_system_view {
     width: 100%;
@@ -259,7 +294,13 @@ Sig List
     display: flex;
 }
 
+
+
+
 /* Sig Top Tab */
+
+
+
 
 .sig_tab_holder_tab {
     color: #404040;
@@ -411,7 +452,7 @@ Sig List
 .popup_sig {
     position: fixed;
     width: 30%;
-    height: 300px;
+    height: 400px;
     background-color: rgb(220,220,220) !important;
     z-index: 501;
     border-radius: 25px !important;
@@ -560,4 +601,77 @@ Sig List
     box-shadow: 2px 2px gray;
     margin-right: 10px !important;
     border-radius: 5px !important;
+}
+
+.wormhole_type_data_holder {
+    width: 90%;
+    margin-left: 5%;
+    height: 80px;
+
+    /* Flexbox */
+    display: flex;
+    align-items: flex-start;
+}
+
+.popupSigData_wh_type_title {
+    width: 5% !important;
+    color: black;
+    font-size: 20px;
+    margin-right: 15px;
+    padding-top: 6px;
+}
+
+.popupSigData_wh_type {
+    width: 90%;
+    height: 40px;
+    background-color: rgb(230,230,230) !important;
+    border-radius: 5px;
+    box-shadow: 2px 2px gray;
+    padding: 5px;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+}
+
+.popupSigData_wh_type input {
+    font-size: 20px;
+    padding-top: 10px;
+    text-align: left;
+    padding-left: 15px;
+    border: 0 !important;
+}
+
+.popupSigData_wh_lifespan_title {
+    width: 1% !important;
+    color: black;
+    font-size: 20px;
+    margin-right: 15px;
+    padding-top: 6px;
+    margin-left: 5%;
+}
+
+.popupSigData_wh_life {
+    width: 30%;
+    height: 40px;
+    background-color: rgb(230,230,230) !important;
+    border-radius: 5px;
+    box-shadow: 2px 2px gray;
+    padding: 5px;
+    margin-left: 10% !important;
+    margin-right: 2% !important;
+}
+
+.popupSigData_wh_life input {
+    font-size: 20px;
+    padding-top: 10px;
+    text-align: left;
+    padding-left: 15px;
+    border: 0 !important;
+}
+
+.popupSigData_wh_lifespan_info {
+    width: 5% !important;
+    color: black;
+    font-size: 20px;
+    margin-right: 15px;
+    padding-top: 6px;
 }
