--- a/src/css/pogger_sig.css
+++ b/src/css/pogger_sig.css
@@ -21,17 +21,17 @@
 
 .AC_wormhole_name_holder {
     width: 100%;
-    height: 30px;
+    height: 18px;
 }
 
 .AC_wormhole_name_title {
-    font-size: 18px;
+    font-size: 14px;
     float: right;
     color: #404040;
 }
 
 .AC_wormhole_name {
-    font-size: 22px;
+    font-size: 16px;
     float: left;
     margin-right: 15px;
 }
@@ -42,12 +42,19 @@
 }
 
 .AC_wormhole_destination {
-    font-size: 18px;
+    font-size: 14px;
     float: right;
     color: #404040;
     margin-right: 15px;
     margin-left: 8px;
     font-weight: bold;
+}
+
+.AC_wormhole_divider {
+    width: 100%;
+    margin-top: 7px;
+    margin-bottom: 5px;
+    text-align: center;
 }
 
 /* Styling for the different wormhole types */
@@ -73,7 +80,7 @@
 }
 
 .C6_style_display {
-    color: #6F0201 !important;
+    color: #ab4b4e !important;
 }
 
 .HS_style_display {
@@ -91,7 +98,7 @@
 .popupSigData_wh_destionation_holder {
     width: 90%;
     margin-left: 5%;
-    height: 200px;
+    height: 70px;
 
     /* Flexbox */
     display: flex;
@@ -120,4 +127,43 @@
     text-align: left;
     padding-left: 15px;
     border: 0 !important;
+}
+
+.popupSigData_wh_status_holder {
+    width: 90%;
+    margin-left: 5%;
+    height: 70px;
+    margin-top: 10px;
+
+    /* Flexbox */
+    display: flex;
+    align-items: flex-start;
+}
+
+.popupSigData_wh_stability_title {
+    color: black;
+    font-size: 20px;
+    width: 15px;
+    margin-right: 15px;
+    padding-top: 6px;
+}
+
+.popupSigData_wh_select_field {
+    height: 30px;
+    width: 35%;
+    float: left !important;
+    margin-left: 30px;
+    margin-right: 25px;
+    background-color: rgb(230, 230, 230) !important;
+    border-radius: 5px;
+    box-shadow: 2px 2px gray;
+    padding: 5px;
+}
+
+.poggersys_system_inbound_sig {
+    width: 120px;
+    font-size: 14px;
+    margin-top: -25px;
+    color: white;
+    text-align: center;
 }
