--- a/src/css/home.css
+++ b/src/css/home.css
@@ -42,7 +42,7 @@
     width: 50%;
     position: absolute;
     height: 200px;
-    top: 200px;
+    top: 260px;
     left: 25%;
 }
 
@@ -61,6 +61,10 @@
     flex-direction: row;
     justify-content: center;
     align-content: center;
+}
+
+.eve_login:hover {
+    cursor: pointer !important;
 }
 
 .log_in {
@@ -87,6 +91,10 @@
 
     .welcome_holder_background {
         height: 200px !important;
+    }
+
+    .wwo_holder {
+        width: 90% !important;
     }
 }
 
@@ -128,7 +136,6 @@
     .welcome_holder_background {
         height: 400px !important;
     }
-
 }
 
 @media (max-width: 1000px) {
@@ -145,7 +152,7 @@
     background-color: #1F1F20 !important;
     width: 80%;
     margin-left: 10% !important;
-    margin-top: -350px;
+    margin-top: -450px;
     z-index: 1 !important;
     position: relative;
     padding-bottom: 50px;
@@ -166,7 +173,7 @@
 .who_we_are_header {
     text-align: center;
     color: white;
-    font-size: 50px;
+    font-size: 40px;
     padding-top: 20px;
     font-weight: light !important;
 }
@@ -232,6 +239,11 @@
     width: 100%;
     margin-bottom: 25px;
     height: 400px;
+    transition-duration: 150ms;
+}
+
+.wwoListItem:hover {
+    background-color: #464646 !important;
 }
 
 .wwolist_title {
@@ -289,7 +301,7 @@ Leadership
     z-index: 1 !important;
     position: relative;
     padding-bottom: 50px;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .leadership_alliance_director_holder {
@@ -422,19 +434,21 @@ Leadership
 
 .rec_paper_main {
     width: 80%;
-    height: 80%;
+    height: auto;
     top: 10% !important;
     margin-left: 10%;
     background-color: #202020 !important;
     z-index: 0;
+    padding-bottom: 50px;
 }
 
 .rec_join_title {
     width: 100%;
     color: #D0D0D0;
-    font-size: 48px;
+    font-size: 38px;
     text-align: center;
     padding-top: 32px;
+    margin-bottom: 25px;
 }
 
 .rec_list_holder {
@@ -457,15 +471,31 @@ Leadership
     height: 650px;
 }
 
-.rec_left_obj, .rec_right_obj {
+.rec_list_center {
+    width: 100% !important;
+    height: 650px;
+}
+
+.rec_left_obj:hover, .rec_right_obj:hover, .rec_center_obj:hover {
+    background-color: #464646 !important;
+}
+
+.rec_left_obj, .rec_right_obj, .rec_center_obj {
     width: 90% !important;
     margin: 2.5% !important;
     background-color: #262626 !important;
     height: 80%;
+    transition-duration: 150ms;
 }
 
 .rec_left_obj {
     margin-left: 5% !important;
+    height: 95%;
+}
+
+.rec_center_obj {
+    margin: 5% !important;
+    margin-top: 2.5% !important;
     height: 95%;
 }
 
@@ -491,6 +521,20 @@ Leadership
 
 /* Mobile Styling... */
 @media (max-width: 1444px) {
+    .leadership_holder {        
+        margin-top: 500px;
+    }
+
+    .wwoLeadershipItem {
+        max-width: 80% !important;
+        max-height: 500px !important;
+    }
+
+    .wwolist_leadership_image {
+        width: 20% !important;
+        margin-left: 40% !important;
+    }
+
     .wwoLeadershipItemFull {
 
         display: block !important;
@@ -506,8 +550,8 @@ Leadership
         height: 350px;
     }
 
-    .wwwoLeadershipFull_right {
-
+    .wwo_list_holder {
+        padding: 0 !important;
     }
 
     .wwoLeadershipFull_text_right {
@@ -517,6 +561,11 @@ Leadership
     }
     .rec_list_holder {
         flex-wrap: wrap;
+    }
+
+    .wwoListItem {
+        height: 300px !important;
+        max-width: 5000px !important;
     }
 }
 
@@ -534,10 +583,11 @@ Leadership
 
 @media only screen and (max-device-width: 720px) {
     .welcome_text_holder {
-        font-size: 32px !important;
+        font-size: 18px !important;
         margin-bottom: 5px !important;
         margin-left: 0px !important;
         width: 150% !important;
+        margin-top: -100px !important;
         margin-left: -25% !important;
     }
 
@@ -559,11 +609,12 @@ Leadership
     }
 
     .who_we_are_header, .wwo_header {
-        font-size: 28px !important;
+        font-size: 18px !important;
     }
 
     .who_we_are_text {
-        font-size: 16px !important;
+        font-size: 18px !important;
+        text-align: center;
     }
 
     .paper_who_we_are {
@@ -588,6 +639,7 @@ Leadership
 
     .wwoListItem {
         height: 200px !important;
+        max-width: 5000px !important;
     }
 
     .wwolist_leadership_title {
@@ -619,7 +671,63 @@ Leadership
         height: 550px !important;
     }
 
+    .rec_join_title {
+        font-size: 18px !important;
+    }
+
+    .rec_inner_title {
+        font-size: 18px !important;
+    }
+
+    .rec_inner_info {
+        font-size: 12px !important;
+        margin-top: 10px !important;
+    }
+
+    .rec_paper_main {
+        width: 100% !important;
+        left: 0 !important;
+        margin-left: 0 !important;
+        margin-top: 100px !important;
+    }
+
+    .rec_holder {
+        height: 950px !important;
+    }
+
     .rec_list_left, .rec_list_right {
         height: 300px !important;
     }
+
+    .leadership_holder {        
+        margin-top: 50px;
+    }
+}
+
+/*
+    Media Player
+*/
+
+.home_media_holder {
+    height: 850px;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 50px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #1F1F20;
+
+}
+
+.home-youtube-holder {
+    float: center;
+    width: 90%;
+    height: 90% !important;
+    align-self: center;
+}
+
+.home-youtube-holder * {
+    height: 100% !important;
 }
