--- a/src/css/CCTV/cctv_tokens.css
+++ b/src/css/CCTV/cctv_tokens.css
@@ -4,10 +4,13 @@
 }
 
 .cctv_list_element {
-    width: 100%;
+    width: 98%;
     display: flex;
     flex-direction: row;
     color: white;
+    border-bottom: solid 1px orange;
+    padding-top: 15px;
+    margin-bottom: 5px;
 }
 
 .cctv_list_row_element {
@@ -23,7 +26,7 @@
 }
 
 .cctv_list_row_header {
-    width: 100%;
+    width: 98%;
     display: flex;
     flex-direction: row;
     color: gray;
@@ -65,4 +68,13 @@
     width: 80% !important;
     margin-left: 10% !important;
     margin-top: 15px !important;
+}
+
+.cctv_view_button {
+    width: 50% !important;
+    margin-top: -7px !important;
+}
+
+.cctv_orange_checkbox {
+    top: -12px !important;
 }
