--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,3 +23,9 @@
     -moz-user-select: none;
     -ms-user-select: none;
 }
+
+.imageRender {
+    width: 50px;
+    height: 50px;
+    background-color: red;
+}
