--- a/src/css/pogger.css
+++ b/src/css/pogger.css
@@ -502,6 +502,7 @@ Sig List
     color: white;
     float: left;
     text-align: center;
+    margin-top: 7px;
 }
 
 .poggersys_system_connections {
